--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <htmll>
 <head>
 <link rel="stylesheet" href="assets/css-main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<main>
 	<div>
 		<div class="flex flex-col justify-center items-center mt-20">
 			<div class="flex flex-col justify-center items-center max-w-[90%] w-[500px]">
@@ -32,6 +34,7 @@
 		</div>
 		</form>
 	</div>
+	</main>
 
 </body>
 </html>
