--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<!-- <div class="fixed inset-0 top-0 left-0 z-10 hidden h-full w-full bg-black opacity-40" id="coverMenu"></div> -->
 	<div class ="contained">
+	</div>
 
 		<!-- MADE TO WORK IN PORTRAIT MODE ONLY, IN MOBILE PHONES
 		BACKGROUND IMAGE CAN BE CHANGED AND ADJUSTED TO WORK IN LANDSCAPE MODE -->
@@ -64,7 +65,7 @@
 				</form>
 			</div>
 		</main>
-	</div>
+	<!--</div>-->
 
 </body>
 </html>
