--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-	<!-- <div class="fixed inset-0 top-0 left-0 z-10 hidden h-full w-full bg-black opacity-40" id="coverMenu"></div> -->
-	<div class ="contained">
-	</div>
+	<!-- <div class="contained fixed inset-0 top-0 left-0 z-10 hidden h-full w-full bg-black opacity-40" id="coverMenu"></div> -->
+	<div class="contained fixed inset-0 top-0 left-0 h-full w-full bg-black opacity-80"></div>
+
+	<!-- <div class ="contained"> </div> -->
 
 		<!-- MADE TO WORK IN PORTRAIT MODE ONLY, IN MOBILE PHONES
 		BACKGROUND IMAGE CAN BE CHANGED AND ADJUSTED TO WORK IN LANDSCAPE MODE -->
@@ -65,7 +66,8 @@
 				</form>
 			</div>
 		</main>
-	<!--</div>-->
+	<!-- </div> -->
+	
 
 </body>
 </html>
