--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 
 <body>
 	<!-- <div class="contained fixed inset-0 top-0 left-0 z-10 hidden h-full w-full bg-black opacity-40" id="coverMenu"></div> -->
-	<div class="contained fixed inset-0 top-0 left-0 h-full w-full bg-black opacity-80"></div>
+	<div class="fixed inset-0 top-0 left-0 h-full w-full bg-white z-10 opacity-100"></div>
+	<div class="contained fixed top-0 z-20 opacity-100"></div>
 
 	<!-- <div class ="contained"> </div> -->
-
-		<!-- MADE TO WORK IN PORTRAIT MODE ONLY, IN MOBILE PHONES
-		BACKGROUND IMAGE CAN BE CHANGED AND ADJUSTED TO WORK IN LANDSCAPE MODE -->
-		
 		<main>
 			<div>
 				<div class="flex flex-col justify-center items-center mt-20">
